update variables and styleguide

--- a/source/index.html
+++ b/source/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap 101 Template</title>
     <!-- Stylesheets -->
-    <link href="assets/stylesheets/application.min.css" rel="stylesheet">
-    <link href="bower-components/font-awesome/font-awesome.min.css" rel="stylesheet">
+    <link href="assets/stylesheets/application-min.css" rel="stylesheet">
+    <link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -15,14 +15,13 @@
   </head>
   <body>
   		<div class="container-fluid">
-			<div class="jumbotron">
+			<div class="jumbotron full-bleed">
 				<h1>SSXD - Atomic Bootstrap<small>Alpha v0.1</h1>
 				<p>A humble attempt at creating an atomic version of the bootstrap framework.</p>
 			</div>
 	  </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="bower-components/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
-    <script src="bower-components/mustache.js/mustache.min.js"></script>
+    <script src="bower_components/mustache.js/mustache.min.js"></script>
   </body>
 </html>
