added button styles

--- a/source/index.html
+++ b/source/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Bootstrap 101 Template</title>
+		<title>Atomic Bootstrap</title>
 		<!-- Stylesheets -->
 		<link href="assets/stylesheets/application-min.css" rel="stylesheet">
 		<link href="bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -23,7 +23,7 @@
 		</div>
 		<div class="container">
 			<div class="row">
-				<a class="btn btn-primary" href="templates/style-guide.html">Style Guide Alpha</a>
+				<a class="btn btn-primary" href="templates/style-guide.html">Style Guide Alpha</a> <a class="btn btn-secondary" href="https://github.com/survivestylexd/atomic-bootstrap">GitHub</a>
 			</div>
 		</div>
 		
